--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,11 +1,6 @@
-name: Main
+name: PullRequest
 
-on:
-  push:
-    branches:
-      - main
-    tags:
-      - '*'
+on: [pull_request]
 
 jobs:
   build:
@@ -40,11 +35,3 @@ jobs:
       #- run: rm -f ~/.m2/settings.xml
       - name: Build Inoa Hawkbit
         run: mvn clean install -Ddocker.image.version=${{ steps.prep.outputs.BUILD_ID }}
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GIT_ACTION_TOKEN }}
-      - name: docker push backend
-        run: docker push --all-tags ghcr.io/inoa-cloud/hawkbit-server
