--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -23,7 +23,7 @@ hawkbit:
           targettoken:
             enabled: true
 inoa:
-  default-tenant: test
+  default-tenant: 29060e54-1548-11ec-9f0d-77b427b9fcee
 management:
   port: 9090
   health:
