enable prometheus metrics

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,3 +24,8 @@ hawkbit:
       configuration:
         authentication-targettoken-enabled:
           defaultValue: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "health,prometheus"
